--- a/index.qmd
+++ b/index.qmd
@@ -20,16 +20,13 @@ about:
         
 ---
 
-_Hi!_ I'm a Ph.D. student at Stanford University investigating the principles and mechanisms that underlie
-learning in neural networks. My research focuses on understanding how the data distribution and optimization choices
-drive the encoding of information and emergence of computational abilities. My goal is to use these insights to design
-interventions in training that can make models more efficient, reliable, and controllable.
+_Hi!_ I am a Ph.D. student at Stanford University studying the principles and mechanisms that underlie learning in neural networks. My research focuses on:
 
-I am currently advised by [Surya Ganguli](https://ganguli-gang.stanford.edu/surya.html) and am a part-time intern at 
-[FAIR](https://ai.facebook.com/). Previously, I was at the [RegLab](https://reglab.stanford.edu/) at Stanford 
-University where I worked with partners at the Internal Revenue Service and Deparment of Labor on using machine 
-learning to optimally allocate scarse government resources.
+- How does data affect what information and computational abilities are learned by networks?
+- How can we engineer the data distribution to train networks to be more reliable, adaptable, and controllable. 
 
-I have also volunteered for [SF New Deal](https://sfnewdeal.org/) where I helped research and draft their [economic
-impact report](https://static1.squarespace.com/static/5e75a094a5e7414c1d12b773/t/5f8ddd68286841680af0c5ef/1603132818535/impact-report).
-Whenever I get the chance, I like to go out social dancing and am part of [Cardinal West Coast Swing](https://www.facebook.com/cardinalswing/) and the [Stanford Tango Club](https://www.facebook.com/groups/StanfordTangoClub/?mibextid=6NoCDW).
+Recently, I have worked on using the data distribution and properties of loss landscapes to make training more efficient, both in terms of requiring less data and training sparser networks. I am currently excited about investigating how the data distribution effects in-context learning, memorization, federated learning and continual learning.
+
+I am advised by [Surya Ganguli](https://ganguli-gang.stanford.edu/surya.html) and am an intern at [Meta AI](https://ai.facebook.com/). Previously, I was at the [RegLab](https://reglab.stanford.edu/) at Stanford University where I worked with partners at the Internal Revenue Service and Deparment of Labor on using machine learning to make government administrative processes more efficient. Before graduate school, I did my undergraduate at Brown University where I studied random matrix theory and its application to black hole physics.
+
+I have also volunteered for [SF New Deal](https://sfnewdeal.org/) where I helped research and draft their [economic impact report](https://static1.squarespace.com/static/5e75a094a5e7414c1d12b773/t/5f8ddd68286841680af0c5ef/1603132818535/impact-report). Whenever I get the chance, I like to go out social dancing and am part of [Cardinal West Coast Swing](https://www.facebook.com/cardinalswing/) and the [Stanford Tango Club](https://www.facebook.com/groups/StanfordTangoClub/?mibextid=6NoCDW).
