--- a/pubs.qmd
+++ b/pubs.qmd
@@ -2,6 +2,7 @@
 title: "Publications"
 ---
 
+## Conference Publications
 \*Equal contribution
 
 
@@ -9,7 +10,7 @@ title: "Publications"
 
 **Unmasking the Lottery Ticket Hypothesis: What's Encoded in a Winning Ticket's Mask?**\
 **Mansheej Paul**\*, Feng Chen\*, Brett W. Larsen\*, Jonathan Frankle, Surya Ganguli, Gintare Karolina Dziugaite\
-_arXiv Preprint_\
+_arXiv Preprint, 2022_\
 <a href="https://arxiv.org/abs/2210.03044"><button type="button" class="btn btn-outline-info btn-sm">arXiv</button></a>
 <a href="https://twitter.com/_BrettLarsen/status/1579868008645681152"><button type="button" class="btn btn-outline-info btn-sm"><i class="bi bi-twitter"></i> Thread</button></a> 
 
@@ -17,7 +18,7 @@ _arXiv Preprint_\
 
 **Lottery Tickets on a Data Diet: Finding Initializations with Sparse Trainable Networks**\
 **Mansheej Paul**\*, Brett W. Larsen\*, Surya Ganguli, Jonathan Frankle, Gintare Karolina Dziugaite\
-_Advances in Neural Information Processing Systems 35 (NeurIPS 2022)_\
+_Accepted at Neural Information Processing Systems (NeurIPS), 2022_\
 <a href="https://arxiv.org/abs/2206.01278"><button type="button" class="btn btn-outline-info btn-sm">arXiv</button></a>
 <a href="https://github.com/mansheej/lth_diet"><button type="button" class="btn btn-outline-info btn-sm"><i class="bi bi-github"></i> GitHub</button></a>
 <a href="https://twitter.com/_BrettLarsen/status/1540024892728303616"><button type="button" class="btn btn-outline-info btn-sm"><i class="bi bi-twitter"></i> Thread</button></a> 
@@ -28,7 +29,7 @@ _Advances in Neural Information Processing Systems 35 (NeurIPS 2022)_\
 
 **Deep Learning on a Data Diet: Finding Important Examples Early in Training**\
 **Mansheej Paul**, Surya Ganguli, Gintare Karolina Dziugaite\
-_Advances in Neural Information Processing Systems 34 (NeurIPS 2021)_\
+_Advances in Neural Information Processing Systems 34 (NeurIPS), 2021_\
 <a href="https://arxiv.org/abs/2107.07075"><button type="button" class="btn btn-outline-info btn-sm">arXiv</button></a> 
 <a href="https://proceedings.neurips.cc/paper/2021/hash/ac56f8fe9eea3e4a365f29f0f1957c55-Abstract.html"><button type="button" class="btn btn-outline-info btn-sm">NeurIPS 2021</button></a> 
 <a href="https://github.com/mansheej/data_diet"><button type="button" class="btn btn-outline-info btn-sm"><i class="bi bi-github"></i> GitHub</button></a> 
@@ -46,3 +47,24 @@ _Advances in Neural Information Processing Systems 33 (NeurIPS 2020)_\
 <a href="https://twitter.com/stanislavfort/status/1322246600320757760"><button type="button" class="btn btn-outline-info btn-sm"><i class="bi bi-twitter"></i> Thread</button></a> 
 
 ---
+
+## Talks
+- **Google Brain**, November 2022
+- **MosaicML**, October 2022
+
+---
+
+## Peer-Reviewed Workshops
+
+[**Unmasking the Lottery Ticket Hypothesis: Efficient Adaptive Pruning for Finding Winning Tickets**](https://openreview.net/forum?id=nBRNjUPhWr)\
+**Mansheej Paul**\*, Feng Chen\*, Brett W. Larsen\*, Jonathan Frankle, Surya Ganguli, Gintare Karolina Dziugaite\
+_Poster at Has it Trained Yet? A Workshop for Algorithmic Efficiency in Practical Neural Network Training, Conference on Neural Information Processing Systems (NeurIPS), 2022_\
+
+[**Pre-Training on a Data Diet: Identifying Sufficient Examples for Early Training**](https://openreview.net/forum?id=U5QRuy_LjUY)\
+**Mansheej Paul**\*, Brett W. Larsen\*, Surya Ganguli, Jonathan Frankle, Gintare Karolina Dziugaite\
+_Poster at The First Workshop on Pre-training: Perspectives, Pitfalls, and Paths Forward, International Conference on Machine Learning (ICML), 2022_\
+
+[**Lottery Tickets on a Data Diet: Identifying Sufficient Data for Finding Sparse Trainable Networks**](https://openreview.net/forum?id=ftkh6HsXrwc)\
+**Mansheej Paul**\*, Brett W. Larsen\*, Surya Ganguli, Jonathan Frankle, Gintare Karolina Dziugaite\ 
+_Spotlight at Sparsity in Neural Networks Workshop (SNN), 2022_
+
